Bug 85876 - Span formatting lost in empty paragraphs (STR comment 3)
Summary: Span formatting lost in empty paragraphs (STR comment 3)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.3.3 release
Hardware: Other All
: medium minor
Assignee: Michael Stahl
URL:
Whiteboard: target:4.5.0 target:4.4.0.0.beta3 tar...
Keywords: bibisected, bisected, regression
: 85943 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-11-04 20:43 UTC by Urmas
Modified: 2015-12-17 08:38 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Urmas 2014-11-04 20:43:08 UTC
1. Put the cursor in the end of a paragraph with local formatting, e.g. bold.
2. Turn the corresponding formatting off
3. Create some empty paragraphs by the Enter key

These paragraphs will not have the format you set in the step 2.

Earlier versions (3.x) had an empty span in each of those:
<text:p text:style-name="P1"><text:span text:style-name="T1"/></text:p>

Master version doesn't:
<text:p text:style-name="P1"/>

That is not how the real word processors work.
Comment 1 V Stuart Foote 2014-11-06 00:03:17 UTC
Looks to come in between the 4.2.3 and 4.2.4 release but that needs to be proven.
Comment 2 Urmas 2014-11-06 03:37:41 UTC
*** Bug 85943 has been marked as a duplicate of this bug. ***
Comment 3 V Stuart Foote 2014-11-06 04:30:34 UTC
From bug 85943, these STR demonstrate how this manifests in memory for a Writer document prior to saving to ODF archive.

1. Turn on Bold either by Ctr+B or by toolbar button.
2. Type some text in bold font.
3. Before pressing Enter, Type Ctl+B to turn bold off.
4. Press Enter two times.
5. Press the Up arrow one time.
6. Look at the Bold toolbar button, Bold will be back on.

Setting 4.2.3 as earliest, bibisect probably is needed.
Comment 4 V Stuart Foote 2014-11-06 05:47:27 UTC
Confirmed regression between 4.2.3.3 and 4.2.4.1 builds

Version: 4.2.3.3 (2014-04-04)
Build ID: 6c3586f855673fa6a1576797f575b31ac6fa0ba3

Version: 4.2.4.1 (2014-04-16)
Build ID: d4c441391e20647b3d2e8dde4d20aa868e77e515

http://cgit.freedesktop.org/libreoffice/core/log/?h=libreoffice-4-2-4&qt=range&q=6c3586f855673fa6a1576797f575b31ac6fa0ba3..d4c441391e20647b3d2e8dde4d20aa868e77e515
Comment 5 Michael Weghorn 2014-12-09 23:47:02 UTC
(In reply to V Stuart Foote from comment #4)
> Confirmed regression between 4.2.3.3 and 4.2.4.1 builds
> 
> Version: 4.2.3.3 (2014-04-04)
> Build ID: 6c3586f855673fa6a1576797f575b31ac6fa0ba3
> 
> Version: 4.2.4.1 (2014-04-16)
> Build ID: d4c441391e20647b3d2e8dde4d20aa868e77e515
> 
> http://cgit.freedesktop.org/libreoffice/core/log/?h=libreoffice-4-2-
> 4&qt=range&q=6c3586f855673fa6a1576797f575b31ac6fa0ba3..
> d4c441391e20647b3d2e8dde4d20aa868e77e515

I bibisected this bug on Debian Wheezy.
I used "git bisect skip" for some commits because I got a "ERROR 4 forking process" when trying to start soffice. (I did not try to find the reason for this.)

my bibisect result:
 87bfccc81c2d8028642492b80505217d7b42a5a8 is the first bad commit
commit 87bfccc81c2d8028642492b80505217d7b42a5a8
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
Date:   Mon May 12 03:21:52 2014 +0000

    source-hash-5b4b6b2aad548cdc27ba2aa7d87ff584ec7e97dd
    
    commit 5b4b6b2aad548cdc27ba2aa7d87ff584ec7e97dd
    Author:     Michaël Lefèvre <lefevre00@yahoo.fr>
    AuthorDate: Thu Mar 20 21:27:40 2014 +0100
    Commit:     Stephan Bergmann <sbergman@redhat.com>
    CommitDate: Mon Mar 24 10:41:38 2014 +0100
    
        fdo#56284 : soffice fails to start unless ~/.config exists and is writable
    
        Try to create $HOME/.config if not present.
        If present, check that it's a directory with RWX user permission
    
        Change-Id: Icef558b2185ad7a7b3518d097f7b62a0b3344083
        Signed-off-by: Stephan Bergmann <sbergman@redhat.com>

------

$ git bisect log
# bad: [423a84c4f7068853974887d98442bc2a2d0cc91b] source-hash-c15927f20d4727c3b8de68497b6949e72f9e6e9e
# good: [752769ad0d2179e17ea0a08cc9004df7b890305b] source-hash-60c64b437c6678dd1d3fa3a6fc2b7da0480890d4
git bisect start 'last43onmaster' 'last42onmaster'
# good: [4fcd68ce4979f85fda4568f4b419a4b41d07345f] source-hash-2c4621c87ed3a7b19de195c21494c9a381e72b2e
git bisect good 4fcd68ce4979f85fda4568f4b419a4b41d07345f
# skip: [422186458e0b4db00c7e26b54d5b631f83bcad2a] source-hash-6948bf58ce181b17f60ef81f10205ef4dac50cc6
git bisect skip 422186458e0b4db00c7e26b54d5b631f83bcad2a
# bad: [a0b33bffff9c787dce71a13b344f06ae1453026b] source-hash-02e0be069e57e724c51f23e2e31b77657a6a1d3d
git bisect bad a0b33bffff9c787dce71a13b344f06ae1453026b
# good: [db29eee512d03b1dc0139b3752bbe7931b165377] source-hash-77b6c1602aaa0bd059077765e7fabb53d9e6ddeb
git bisect good db29eee512d03b1dc0139b3752bbe7931b165377
# bad: [9d57c189d74551d2b3770cc81139ea10a62e672f] source-hash-5b5e62650354788e50b44f32c22b687b2018aba9
git bisect bad 9d57c189d74551d2b3770cc81139ea10a62e672f
# good: [54cb1e734a8a8afb71a38fb1ff0f61103af44147] source-hash-1b922da415339726fb0186246dba6a03429b33bf
git bisect good 54cb1e734a8a8afb71a38fb1ff0f61103af44147
# bad: [1b831d02ff29aa5763cf33ae75131f98d882201f] source-hash-b7c3e851465638d4416ca8837937946353561088
git bisect bad 1b831d02ff29aa5763cf33ae75131f98d882201f
# skip: [524032d94d92022e87e0add99aea74683da8f368] source-hash-c7363cb6d1d31f2a7d40a76e62b5934629a1a8a1
git bisect skip 524032d94d92022e87e0add99aea74683da8f368
# bad: [87bfccc81c2d8028642492b80505217d7b42a5a8] source-hash-5b4b6b2aad548cdc27ba2aa7d87ff584ec7e97dd
git bisect bad 87bfccc81c2d8028642492b80505217d7b42a5a8
# first bad commit: [87bfccc81c2d8028642492b80505217d7b42a5a8] source-hash-5b4b6b2aad548cdc27ba2aa7d87ff584ec7e97dd
Comment 6 Michael Weghorn 2014-12-10 00:03:21 UTC
(In reply to Michael Weghorn from comment #5)
> I bibisected this bug on Debian Wheezy.

Sorry, I have to correct myself. I bibisected it on Debian Jessie (Debian 8).
Comment 7 V Stuart Foote 2014-12-10 00:14:30 UTC
Thanks for the bibisect, confirming issue is still with us at
Version: 4.5.0.0.alpha0+
Build ID: 235f3cbc1810e1dd004665585b5cfca1b856c784
TinderBox: Win-x86@42, Branch:master, Time: 2014-12-08_00:22:32
Locale: en_US
Comment 8 V Stuart Foote 2014-12-10 02:33:58 UTC
Poked at the 4.2 installers I had handy, issue was already present at 
Version: 4.2.4.0.0+
Build ID: b6a0eacbc36b9db10f12a246606d8e2f1c30fef9
TinderBox: Win-x86@42, Branch:libreoffice-4-2, Time: 2014-04-10_14:59:27

but was not present at
Version: 4.2.3.0.0+
Build ID: 9643431bb7b92c054666fb8c344c81e787c8fc06
TinderBox: Win-x86@42, Branch:libreoffice-4-2, Time: 2014-03-12_22:54:17

So, narrows the range a fair bit more than query in comment 4

http://cgit.freedesktop.org/libreoffice/core/log/?h=libreoffice-4-2&qt=range&q=9643431bb7b92c054666fb8c344c81e787c8fc06..b6a0eacbc36b9db10f12a246606d8e2f1c30fef9

But, nothing jumps out at me--anyone?
Comment 9 Michael Stahl 2014-12-15 20:28:36 UTC
regression from:

commit 31b76e83d70718c95ac7913469629ea2c0294bfe
Author:     Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
AuthorDate: Sun Mar 23 15:00:19 2014 +0100

    fdo#74981: cutting nothing should do nothing, should fix field dupes
Comment 10 Michael Stahl 2014-12-15 21:25:07 UTC
fixed on master
Comment 11 Commit Notification 2014-12-15 21:25:25 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0f78ae1ca33f83737553ad204c869a63498b7d2d

fdo#85876: Revert "fdo#74981: cutting nothing should do nothing, ...

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2014-12-15 21:27:56 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d1f4dc626cab09c8ab7e37f6f7b695267bef78c2&h=libreoffice-4-4

fdo#85876: Revert "fdo#74981: cutting nothing should do nothing, ...

It will be available in 4.4.0.0.beta3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2014-12-16 20:32:59 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7f2ed29e1ca7782358f8dcc14f8c773c9bba3544&h=libreoffice-4-3

fdo#85876: sw: fix attributes when splitting paragraph

It will be available in 4.3.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2014-12-18 01:52:11 UTC
Bjoern Michaelsen committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e57b0ebeb7e75d36546f6abef3a26a8edc7dea7f

fdo#85876: add unittest

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 15 Robinson Tryon (qubit) 2015-12-17 08:38:39 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]