fdo#85876: Revert "fdo#74981: cutting nothing should do nothing, ...

... should fix field dupes"

This reverts commit f384598d8eec91c3c0f84a07ff3e59b8e3e13b3f.

The attributes have to be copied in case splitting a paragraph creates
an empty paragraph.

Change-Id: Icd5730dd9ab8a68f737492645988a4d2f07af7a0
(cherry picked from commit 0f78ae1ca33f83737553ad204c869a63498b7d2d)